--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,14 @@
+image: node:lts-buster-slim
+
 test:
   tags:
     - myusine
   script:
-    - echo "Test !"
+    - npm -v
 
 build:
+  image: python:rc-slim-buster
   tags:
     - myusine
   script:
-    - echo "Build !"
+    - python3 -c 'print("hello")'
