--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,27 +8,62 @@ workflow:
   rules:
     - if: $CI_PIPELINE_SOURCE == "push"
     - if: $CI_PIPELINE_SOURCE == "web"
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
+    # - if: $CI_PIPELINE_SOURCE == "merge_request_event"
 
 # liste des étapes d'exécution des jobs
 stages:
+  - installing deps
   - testing
   - building
   - deploying
+
+variables:
+  TRIGGER_CACHE: "off"
+
+deps:
+  stage: installing deps
+  tags:
+    - myusine
+  script:
+    - npm install
+  # on upload "push" le dossier node_modules nouvellement créé dans gitlab
+  # avant suppression du conteneur à la fin du job
+  cache:
+    key: cache npm
+    paths:
+      - node_modules/
+    policy: push
+  rules:
+    # on régénère le cache uniquement si les dépendances on changé (package.json)
+    - changes: 
+        - package.json
+      
+    # procédure manuelle au cas où
+    - if: $TRIGGER_CACHE == "on"
 
 test:
   stage: testing
   tags:
     - myusine
   script:
-    - npm -v
-  rules:
-    # ==, !=, pour les regex =~, !~
-    # une règle est vraie si toutes ses clauses sont vraies
-    # ET logique
-    - if: $CI_COMMIT_BRANCH =~ /feature[0-9]+/
-      changes:
-        - "*.md"
+    - npm test
+  artifacts:
+    expire_in: "1 hour"
+    # on prélève les artefacts avec "paths" 
+    # pour les proposer en téléchargement dans gitlab
+    # et les rendre disponibles dans les jobs suivants
+    # paths:
+    #   - artifacts/
+    # on utilise "reports" pour intégrer certains rapports
+    # directement dans l'interface de gitlab
+    reports:
+      junit: artifacts/units.xml
+  # on installe "pull" le cache npm contenant node_modules/
+  # dans le conteneur avant l'exécution des commandes npm
+  cache:
+    key: cache npm
+    untracked: true
+    policy: pull
 
 build:
   stage: building
@@ -54,3 +89,7 @@ deploy:
   rules:
     - if: $CI_COMMIT_TAG
       when: manual
+  cache:
+    key: cache npm
+    untracked: true
+    policy: pull
