--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "vitest run --reporter=junit --outputFile=artifacts/units.xml"
   },
   "dependencies": {
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vue/compiler-dom": "^3.2.39",
+    "@vue/test-utils": "^2.0.2",
+    "core-js": "^3.25.1",
+    "jsdom": "^20.0.0",
+    "vite": "^3.1.1",
+    "vitest": "^0.23.2",
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
