mise en place de la couverture de code - plugin istanbul + configuration du rapport cobertura - test sur l'email + fixture - remontée du taux total par une regex - remontée du rapport cobertura dans les MR

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,7 @@ test:
     # directement dans l'interface de gitlab
     reports:
       junit: artifacts/units.xml
+      cobertura: coverage/cobertura-coverage.xml 
   # on installe "pull" le cache npm contenant node_modules/
   # dans le conteneur avant l'exécution des commandes npm
   cache:
