--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "@vitejs/plugin-vue": "^3.1.0",
     "@vitest/coverage-istanbul": "^0.23.2",
     "@vue/compiler-dom": "^3.2.39",
+    "@vue/compiler-sfc": "^3.2.39",
     "@vue/test-utils": "^2.0.2",
     "core-js": "^3.25.1",
     "jsdom": "^20.0.0",
     "vite": "^3.1.1",
     "vitest": "^0.23.2",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-loader": "^17.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-eslint": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "eslint": "^6.2.0",
+    "eslint-plugin-vue": "^6.0.0"
   },
   "eslintConfig": {
     "root": true,
